--- a/inst/doc/DeconfounderSingleOutcome.tex
+++ b/inst/doc/DeconfounderSingleOutcome.tex
@@ -241,7 +241,8 @@ tables \emph{measFilename} and \emph{drugFilename} stored at
 \end{Shaded}
 
 The rest of the algorithm is implemented with python. First, specify the
-python to use using the \emph{reticulate} package. For more
+python to use using the \emph{reticulate} package. For example, use the
+python in a conda environment called ``deconfounder\_py3''.
 
 \begin{Shaded}
 \begin{Highlighting}[]
